--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,7 +5,7 @@ const EXPERIENCES = [
     {
         title: "ERCO ENERGI | Desarrollo BackEnd",
         description:
-            "Soporte y optimización de desarrollos existentes. Creación de plataforma interna para control de inventario. Implementación de sistema de firmas digitales. Automatización de procesos internos. Mantenimiento y seguridad del software corporativo",
+            "Brindé soporte a desarrollos existentes optimizando código y estructura; colaboré en el desarrollo de una nueva plataforma interna para el control de inventario de equipos; implementé un sistema de firmas digitales con notificaciones automáticas por correo; participé en la automatización de procesos internos y ayudé en la realización de funciones relacionadas con el mantenimiento del software interno de la empresa",
         date: "Octubre 2024 - Abril 2025",
     }
 ]
