--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { description, title } = Astro.props;
 		<title>{title}</title>
 	</head>
 
-	<body class="px-5">
+	<body class="px-5 bg-neutral-950">
 
 		<div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
 		
