--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,11 +28,12 @@ const { description, title } = Astro.props;
 		<title>{title}</title>
 	</head>
 
-	<body class="px-5 bg-neutral-950">
+	<body class="relative text-black dark:text-white">
 
 		<div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div>
 		
 		<Header />
+		
 		<slot />
 
 		<Footer />
