--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,5 +1,5 @@
 ---
- const personalImageAlt = "Edinson Urbano"
+ const personalImageAlt = "FT - Edinson Urbano"
 ---
 
 <article class="flex flex-col items-center justify-center gap-8 text-gray-700 dark:text-gray-300 md:flex-row">
@@ -40,6 +40,6 @@
 
   </div>
 
-  <img width="200" height="200" src="../../public/projects/svgl.jpg" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
+  <img width="200" height="200" src="/projects/svgl.png" alt={personalImageAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-black/20 dark:bg-yellow-500/5 ring-1 ring-black/70 dark:ring-white/20 " style="object-position: 50% 50%">
 
 </article>
