Cambios de color

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,3 +13,18 @@
     </nav>
 
 </header>
+
+
+<!-- <header
+  class="fixed top-0 left-0 w-full z-50 flex justify-center items-center py-5 bg-white dark:bg-black/80 shadow-md backdrop-blur-md"
+>
+  <span></span>
+
+  <nav class="flex flex-row gap-10 opacity-80">
+    <a href="#top">Inicio</a>
+    <a href="#experiencia">Experiencia</a>
+    <a href="#proyectos">Proyectos</a>
+    <a href="#sobre-mi">Sobre Mí</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+</header> -->
