Cambios de header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="flex justify-center items-center py-5 w-full wxl:w-[1120px] mx-auto">
+<!-- <header class="flex justify-center items-center py-5 w-full wxl:w-[1120px] mx-auto">
 
     <span></span>
 
@@ -12,11 +12,11 @@
         
     </nav>
 
-</header>
+</header> -->
 
 
-<!-- <header
-  class="fixed top-0 left-0 w-full z-50 flex justify-center items-center py-5 bg-white dark:bg-black/80 shadow-md backdrop-blur-md"
+<header
+  class="fixed top-0 left-0 w-full z-50 flex justify-center items-center py-5 bg-white dark:bg-black/20 shadow-md backdrop-blur-md"
 >
   <span></span>
 
@@ -27,4 +27,4 @@
     <a href="#sobre-mi">Sobre Mí</a>
     <a href="#contacto">Contacto</a>
   </nav>
-</header> -->
+</header>
