--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,6 +7,8 @@ import Ionic from './icons/Ionic.astro';
 import Angular from './icons/Angular.astro';
 import Scss from './icons/Scss.astro';
 import Html from './icons/Html.astro';
+import Jinja from './icons/Jinja.astro';
+
 
 const TAGS = {
   PYTHON: { name: "Python", class: "bg-white text-[#003159]", icon: Python },
@@ -16,6 +18,7 @@ const TAGS = {
   ANGULAR: { name: "Angular", class: "bg-white text-[#003159]", icon: Angular },
   SCSS: { name: "SCSS", class: "bg-white text-[#003159]", icon: Scss },
   HTML: { name: "HTML", class: "bg-white text-[#003159]", icon: Html },
+  JINJA: { name: "Jinja", class: "bg-white text-[#003159]", icon: Jinja },
 
 
 };
@@ -28,7 +31,7 @@ const PROJECTS = [
         link: "https://github.com/urbanoURN/portafolio-dev",
         github: "https://github.com/urbanoURN/portafolio-dev",
         image: "/projects/svgh.jpg",
-        tags: [TAGS.PYTHON, TAGS.DJANGO],
+        tags: [TAGS.PYTHON, TAGS.DJANGO, TAGS.JINJA],
     },
 
     {
