--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import ContactMe from '../components/icons/ContactMe.astro';
 ---
 
 <Layout title="Porfolio de Edinson == Desarrollador y Programador WEB y Movile" description="contratame y trabajemos juntos">
-	<main class="px-5">
+	<main class="px-50 pt-25">
 		<!-- principal information -->
 		<SectionContainer class="py-44 pb32">
 
